--- a/themes/custom-theme/theme/mytheme/login/messages/messages_vi.properties
+++ b/themes/custom-theme/theme/mytheme/login/messages/messages_vi.properties
@@ -1,3 +1,4 @@
+locale_vi = Vietnamese
 email = Email
 password = Mật khẩu
 rememberMe = Lưu đăng nhập
@@ -5,6 +6,7 @@ doForgotPassword = Quên mật khẩu?
 loginAccountTitle = Đăng nhập
 registerTitle = Đăng ký
 doLogIn = Đăng nhập
+enterYourDetail = Hãy nhập thông tin của bạn
 doRegister = Đăng ký
 emailOTP = Xác thực OTP qua email
 smsOTP = Xác thực OTP qua SMS
